--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -29,7 +29,7 @@
                         <a href="/blog">Blog</a>
                     </li>
                     <li>
-                        <a href="/contact-us">Contact Us</a>
+                        <a href="/contact">Contact Us</a>
                     </li>
                     <li>
                         <a href="/gallery">Gallery</a>
