--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -2,6 +2,9 @@
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/blog.css">
+    <meta property="og:title" content="{{ title }}"/>
+    <meta property="og:image" content="{{ image }}"/>
+    <meta property="og:image:secure_url" content="{{ image }}"/>
 {% endblock %}
 
 {% block body %}
