--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/assets/css/blog.css">
     <meta property="og:title" content="{{ title }}"/>
     <meta property="og:image" content="{{ image }}"/>
-    <meta property="og:image:secure_url" content="{{ image }}"/>
+    {# <meta property="og:image:secure_url" content="{{ image }}"/> #}
 {% endblock %}
 
 {% block body %}
