--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -60,29 +60,8 @@
     <link rel="preload" as="image" href="{{ preloadImg }}" />
     {% endif %}
 
-    <!-- Sitewide Stylesheets and Scripts -->
-    <!-- Preload the stylesheet -->
-    <link
-      rel="preload"
-      href="/css/root.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-
-    <!-- Fallback for browsers that don't support preload or have JS disabled -->
-    <noscript><link rel="stylesheet" href="/css/root.css" /></noscript>
-
-    <!-- Sitewide Stylesheets and Scripts -->
-    <!-- Preload the stylesheet -->
-    <link
-      rel="preload"
-      href="/css/dark.css"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-
-    <!-- Fallback for browsers that don't support preload or have JS disabled -->
-    <noscript><link rel="stylesheet" href="/css/dark.css" /></noscript>
+    <link rel="stylesheet" href="/assets/css/root.css" />
+    <link rel="stylesheet" href="/assets/css/dark.css" />
 
     <script defer src="/assets/js/dark.js"></script>
     <script defer src="/assets/js/nav.js"></script>
