--- a/src/assets/css/fence-deck.css
+++ b/src/assets/css/fence-deck.css
@@ -7,7 +7,8 @@
     min-height: 100dvh;
     /* 200px - 300px top */
     /* 60px - 100px bottom */
-    padding: clamp(12.5rem, 12vw, 18.75rem) 1rem clamp(3.75rem, 8vw, 6.25rem) 1rem;
+    padding: clamp(12.5rem, 12vw, 18.75rem) 1rem clamp(3.75rem, 8vw, 6.25rem)
+      1rem;
     display: flex;
     align-items: flex-end;
     position: relative;
@@ -94,7 +95,12 @@
     content: "";
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, rgba(26, 26, 26, 0.86) 10.79%, rgba(26, 26, 26, 0) 48.32%, rgba(26, 26, 26, 0.86) 82.84%);
+    background: linear-gradient(
+      180deg,
+      rgba(26, 26, 26, 0.86) 10.79%,
+      rgba(26, 26, 26, 0) 48.32%,
+      rgba(26, 26, 26, 0.86) 82.84%
+    );
     /* prevents the cursor from interacting with it */
     pointer-events: none;
     display: block;
@@ -135,7 +141,7 @@
 /* Large Desktop Parallax Effect - 100px */
 @media only screen and (min-width: 100rem) {
   #hero-1950 .cs-background {
-    background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/restaurant-space.jpeg");
+    background: url("/assets/images/fence/fence-bg.avif");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -162,6 +168,143 @@
     opacity: 1;
   }
 }
+
+/*-- -------------------------- -->
+<---  Auto Scroll Brands Images -->
+<--- -------------------------- -*/
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - (var(--scroller-gap) / 2)));
+  }
+}
+
+/* mobile*/
+#autoscroll-gallery {
+  width: 100%;
+  /* max-width: 80rem; */
+  /* margin: auto; */
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+
+  /* Using clamp to create fluid values based on viewport width */
+  --scroller-gap: clamp(1.5rem, calc(1rem + 2vw), 4rem);
+  /* --scroller-max-width: clamp(250px, calc(250px + 30vw), 800px); */
+  --scroller-max-width: 676px;
+
+  .cs-content {
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .gallery-wrapper {
+    li {
+      list-style: none;
+      transition:
+        transform 200ms ease-in-out,
+        filter 200ms linear;
+      touch-action: pan-y;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+
+      &:hover {
+        transform: translateY(-10%);
+        filter: grayscale(0);
+      }
+
+      img {
+        object-fit: contain;
+        /* width: clamp(150px, calc(150px + 5vw), 250px); */
+        /* height: 100%; */
+        max-width: 30px;
+        aspect-ratio: 1/1;
+      }
+
+      .cs-text {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  .scroller {
+    .scroller-inner {
+      display: flex;
+      padding-block: 1rem;
+      padding-inline: 0;
+      gap: var(--scroller-gap);
+      align-items: center;
+      /* justify-content: space-around; */
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+  }
+
+  /*animation starts here */
+  [data-animated="true"] {
+    overflow: hidden;
+
+    mask: linear-gradient(
+      90deg,
+      transparent,
+      white 20%,
+      white 80%,
+      transparent
+    );
+
+    .scroller-inner {
+      flex-wrap: nowrap;
+      animation: scroll var(--animation-duration, 20s)
+        var(--animation-direction, forwards) linear infinite;
+      width: fit-content;
+
+      &:hover {
+        animation-play-state: paused;
+        filter: grayscale(0.4);
+      }
+
+      li {
+        /* width: fit-content; */
+        width: max-content;
+
+        .cs-text {
+          width: max-content;
+        }
+      }
+    }
+  }
+
+  .scroller[data-direction="right"] {
+    --animation-direction: reverse;
+  }
+
+  .scroller[data-direction="left"] {
+    --animation-direction: reverse;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  #autoscroll-gallery {
+    .scroller {
+      max-width: (320/16rem);
+    }
+  }
+}
+
+@media screen and (min-width: 426px) {
+  #autoscroll-gallery {
+    .scroller {
+      max-width: var(--scroller-max-width);
+    }
+  }
+}
+
 /*-- -------------------------- -->
 <---         Why Choose         -->
 <--- -------------------------- -*/
@@ -664,11 +807,23 @@
     content: "";
     width: 8.25rem;
     height: 68.75rem;
-    background: -moz-linear-gradient(top, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: -moz-linear-gradient(
+      top,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: -webkit-linear-gradient(
+      top,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: linear-gradient(
+      to bottom,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     opacity: 0.08;
     transform: rotate(-25deg);
     position: absolute;
@@ -685,11 +840,23 @@
     content: "";
     width: 8.25rem;
     height: 75rem;
-    background: -moz-linear-gradient(top, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: -moz-linear-gradient(
+      top,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: -webkit-linear-gradient(
+      top,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: linear-gradient(
+      to bottom,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     opacity: 0.08;
     transform: rotate(-25deg);
     position: absolute;
@@ -1172,7 +1339,9 @@
     position: relative;
     z-index: 10;
     transform: translateY(1.5rem) rotateY(90deg);
-    transition: opacity 0.3s, transform 0.5s;
+    transition:
+      opacity 0.3s,
+      transform 0.5s;
   }
 }
 /* Tablet - 768px */
@@ -1240,11 +1409,23 @@
     content: "";
     width: 8.25rem;
     height: 56.25rem;
-    background: -moz-linear-gradient(top, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: -moz-linear-gradient(
+      top,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: -webkit-linear-gradient(
+      top,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: linear-gradient(
+      to bottom,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     opacity: 0.08;
     transform: rotate(-25deg);
     position: absolute;
@@ -1261,11 +1442,23 @@
     content: "";
     width: 8.25rem;
     height: 62.5rem;
-    background: -moz-linear-gradient(top, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: -moz-linear-gradient(
+      top,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: -webkit-linear-gradient(
+      top,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ffffff 0%, rgba(255, 255, 255, 0.45) 100%);
+    background: linear-gradient(
+      to bottom,
+      #ffffff 0%,
+      rgba(255, 255, 255, 0.45) 100%
+    );
     opacity: 0.08;
     transform: rotate(-25deg);
     position: absolute;
