--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -19,6 +19,8 @@
     --bodyFontSize: 1rem;
     /* 60px - 100px top and bottom */
     --sectionPadding: clamp(3.75rem, 7.82vw, 6.25rem) 1rem;
+    --canadaBannerHeight: 6.5rem;
+    --canada-banner-bg: #d76d2a;
   }
   .cs-topper {
     display: block;
@@ -3541,5 +3543,52 @@ body.dark-mode .cs-button-5:before {
 @media only screen and (min-width: 0rem) {
   body.dark-mode #footer {
     background: #061623;
+  }
+}
+/*-- -------------------------- -->
+<---       Canada Banner        -->
+<--- -------------------------- -*/
+@media only screen and (min-width: 0rem) {
+  .canada-banner {
+    position: absolute;
+    top: var(--canadaBannerHeight);
+    z-index: 2;
+    width: 100%;
+    display: grid;
+    place-items: center;
+    background: var(--canada-banner-bg);
+    padding: 0.75rem;
+  }
+  .canada-banner .cs-container {
+    grid-area: 1/1;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    font-weight: 600;
+  }
+  .canada-banner .cs-container img {
+    width: 15%;
+    height: auto;
+    place-self: end;
+  }
+  .canada-banner .cs-container .cs-text {
+    color: var(--bodyTextColorWhite);
+    width: fit-content;
+  }
+}
+@media only screen and (min-width: 35rem) {
+  .canada-banner .cs-container img {
+    width: 7%;
+  }
+}
+@media only screen and (min-width: 64rem) {
+  .canada-banner {
+    --canadaBannerHeight: 5.6rem;
+    padding-top: 1.375rem;
+  }
+  .canada-banner .cs-container img {
+    width: 5%;
   }
 }
