--- a/src/assets/css/fence-deck.css
+++ b/src/assets/css/fence-deck.css
@@ -108,7 +108,7 @@
     min-height: 100dvh;
     /* 200px - 300px top */
     /* 60px - 100px bottom */
-    padding: clamp(8rem, 8vw, 12.75rem) 1rem clamp(3.75rem, 8vw, 6.25rem) 1rem;
+    padding: clamp(5rem, 5.5vw, 9.75rem) 1rem clamp(3.75rem, 7vw, 4.25rem) 1rem;
     display: flex;
     align-items: stretch;
     position: relative;
@@ -133,6 +133,7 @@
     justify-content: space-between;
     /* centers content horizontally, set to flex-start to left align */
     align-items: center;
+    gap: 1rem;
   }
   #hero-1950 .cs-title {
     /* 39px - 61px */
@@ -148,6 +149,7 @@
     color: #28a745;
     position: relative;
     text-shadow: var(--text-shadow-lg);
+    text-align: center;
   }
   #hero-1950 .cs-text {
     /* 16px - 20px */
@@ -167,9 +169,10 @@
   }
   #hero-1950 .cs-flex-group .cs-sub-group {
     display: grid;
-    grid-template-areas: "text text" "logo img" "cta img";
+    grid-template-areas: "text cta" "img img";
     grid-template-columns: auto auto;
-    column-gap: 0.8rem;
+    column-gap: 0.5rem;
+    row-gap: 0.5rem;
     margin-bottom: 1rem;
   }
   #hero-1950 .cs-flex-group .cs-sub-group img {
@@ -181,14 +184,18 @@
     height: auto;
     justify-self: start;
     border-radius: 6px;
+    margin-inline: auto;
   }
   #hero-1950 .cs-flex-group .cs-sub-group .cs-text {
     grid-area: text;
     text-transform: uppercase;
     font-size: clamp(1rem, 3vw, 1.5rem);
     margin-bottom: 0;
+    text-shadow: var(--text-shadow-lg);
+    place-content: center;
   }
   #hero-1950 .cs-flex-group .cs-sub-group .arrow-logo {
+    display: none;
     grid-area: logo;
     color: var(--bodyTextColorWhite);
     justify-self: end;
@@ -209,6 +216,7 @@
     text-align: center;
     color: var(--bodyTextColorWhite);
     font-size: clamp(1rem, 3vw, 1.5rem);
+    display: none;
   }
   #hero-1950 .cs-flex-group .cs-h3 {
     font-size: clamp(1.5rem, 5vw, 2.3rem);
@@ -231,6 +239,21 @@
     display: table;
     clear: both;
   }
+  #hero-1950 .cs-button-solid-group {
+    position: relative;
+  }
+  #hero-1950 .cs-button-solid-group:after {
+    content: "";
+    position: absolute;
+    inset: -3px;
+    z-index: -1;
+    border-radius: inherit;
+    background: conic-gradient(var(--primaryLight) var(--fill), transparent var(--fill));
+    transition: --fill 0.6s ease-in-out;
+  }
+  #hero-1950 .cs-button-solid-group:hover:after {
+    --fill: 100%;
+  }
   #hero-1950 .cs-button-solid {
     font-size: 1rem;
     font-weight: 700;
@@ -241,32 +264,32 @@
     /* 32px - 48px */
     color: #fff;
     display: inline-block;
+    z-index: 2;
     position: relative;
-    z-index: 1;
+    padding: 0 clamp(0.5rem, 2vw, 2rem);
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
   }
   #hero-1950 .cs-button-solid:before {
     display: none;
   }
-  #hero-1950 .cs-button-solid span {
-    z-index: 2;
-    position: relative;
-    height: 100%;
+  #hero-1950 .images-group {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    max-width: 32.25rem;
+  }
+  #hero-1950 .images-group picture {
     width: 100%;
-    display: block;
-    padding: 0 clamp(1rem, 2vw, 2rem);
-    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
+    height: 100%;
+    max-width: 25rem;
+    aspect-ratio: 1/1;
   }
-  #hero-1950 .cs-button-solid:after {
-    content: "";
-    position: absolute;
-    inset: -3px;
-    z-index: -1;
-    border-radius: inherit;
-    background: conic-gradient(#239bec var(--fill), transparent var(--fill));
-    transition: --fill 0.6s ease-in-out;
-  }
-  #hero-1950 .cs-button-solid:hover:after {
-    --fill: 100%;
+  #hero-1950 .images-group picture img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
   }
   #hero-1950 .cs-background {
     width: 100%;
@@ -307,7 +330,7 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    gap: 2rem;
+    gap: 1.5rem;
   }
   #hero-1950 .cs-title {
     width: 55%;
@@ -329,6 +352,7 @@
     width: 100%;
     place-self: center;
     text-align: center;
+    margin-bottom: 0;
   }
   #hero-1950 .cs-flex-group .cs-text {
     grid-area: text;
@@ -351,6 +375,7 @@
     width: 100%;
   }
   #hero-1950 .cs-flex-group .cs-sub-group .arrow-logo {
+    display: block;
     grid-area: arrow;
   }
   #hero-1950 .cs-flex-group .cs-sub-group .arrow-logo svg {
@@ -365,6 +390,15 @@
     margin-bottom: 1rem;
     justify-self: end;
     padding-right: 1rem;
+  }
+  #hero-1950 .cs-flex-group .cs-sub-group .cta-group .text-or {
+    display: block;
+  }
+  #hero-1950 .images-group {
+    max-width: 37.5rem;
+  }
+  #hero-1950 .cs-button-solid {
+    padding: 0 clamp(1rem, 2vw, 2rem);
   }
 }
 /* Large Desktop Parallax Effect - 100px */
