--- a/src/assets/less/fence-deck.less
+++ b/src/assets/less/fence-deck.less
@@ -172,7 +172,7 @@
     /* 60px - 100px bottom */
     // padding: clamp(12.5rem, 12vw, 18.75rem) (16/16rem)
     //   clamp(3.75rem, 8vw, 6.25rem) (16/16rem);
-    padding: clamp(8rem, 8vw, 12.75rem) 1rem clamp(3.75rem, 8vw, 6.25rem) 1rem;
+    padding: clamp(5rem, 5.5vw, 9.75rem) 1rem clamp(3.75rem, 7vw, 4.25rem) 1rem;
     display: flex;
     align-items: stretch;
     position: relative;
@@ -200,6 +200,7 @@
       justify-content: space-between;
       /* centers content horizontally, set to flex-start to left align */
       align-items: center;
+      gap: 1rem;
     }
 
     .cs-title {
@@ -218,6 +219,7 @@
       color: #28a745;
       position: relative;
       text-shadow: var(--text-shadow-lg);
+      text-align: center;
 
     //   &:after {
     //     content: "";
@@ -249,9 +251,10 @@
 
       .cs-sub-group {
         display: grid;
-        grid-template-areas: "text text" "logo img" "cta img";
+        grid-template-areas: "text cta" "img img" ;
         grid-template-columns: auto auto;
-        column-gap: 0.8rem;
+        column-gap: 0.5rem;
+        row-gap: 0.5rem;
         margin-bottom: 1rem;
 
         img {
@@ -264,6 +267,7 @@
           height: auto;
           justify-self: start;
           border-radius: 6px;
+          margin-inline: auto;
         }
 
         .cs-text {
@@ -272,9 +276,12 @@
           text-transform: uppercase;
           font-size: clamp(1rem, 3vw, 1.5rem);
           margin-bottom: 0;
+          text-shadow: var(--text-shadow-lg);
+          place-content: center;
         }
 
         .arrow-logo {
+          display: none;
           grid-area: logo;
           color: var(--bodyTextColorWhite);
           justify-self: end;
@@ -297,11 +304,9 @@
             text-align: center;
             color: var(--bodyTextColorWhite);
             font-size: clamp(1rem, 3vw, 1.5rem);
+            display: none;
           }
 
-          .cs-button-solid {
-
-          }
         }
       }
 
@@ -331,6 +336,31 @@
       }
     }
 
+    .cs-button-solid-group{
+        position: relative;
+
+        &:after{
+            content: "";
+            position: absolute;
+            inset: -3px;
+            z-index: -1;
+            border-radius: inherit;
+
+            background: conic-gradient(
+                var(--primaryLight) var(--fill),
+                transparent var(--fill)
+            );
+            transition: --fill 0.6s ease-in-out;
+
+        }
+
+        &:hover{
+            &:after{
+                --fill: 100%;
+            }
+        }
+    }
+
     .cs-button-solid {
       font-size: (16/16rem);
       font-weight: 700;
@@ -342,45 +372,23 @@
       color: #fff;
       display: inline-block;
       position: relative;
-      z-index: 1;
+        z-index: 2;
+        position: relative;
+        // padding: 0 0.5rem;
+
+        padding: 0 clamp(0.5rem, 2vw, 2rem);
+        background: linear-gradient(
+          280deg,
+          #239bec 0%,
+          #1055bc 50%,
+          #185fc9 100%
+        );
+        box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+
       &:before{
         display: none;
       }
-      span{
-        z-index: 2;
-        position: relative;
-        height: 100%;
-        width: 100%;
-        display: block;
 
-            padding: 0 clamp(1rem, 2vw, 2rem);
-            background: linear-gradient(
-              280deg,
-              #239bec 0%,
-              #1055bc 50%,
-              #185fc9 100%
-            );
-      }
-
-            &:after{
-                content: "";
-                position: absolute;
-                inset: -3px;
-                z-index: -1;
-                border-radius: inherit;
-
-                background: conic-gradient(
-                    #239bec var(--fill),
-                    transparent var(--fill)
-                );
-                transition: --fill 0.6s ease-in-out;
-            }
-
-            &:hover{
-                &:after{
-                    --fill: 100%;
-                }
-            }
 
     //   &:before {
     //     content: "";
@@ -401,6 +409,26 @@
     //       width: 100%;
     //     }
     //   }
+    }
+
+    .images-group{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        max-width: (516/16rem);
+
+        picture{
+            width: 100%;
+            height:100%;
+            max-width: 25rem;
+            aspect-ratio: 1/1;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+            }
+        }
     }
 
     .cs-background {
@@ -460,7 +488,7 @@
       justify-content: space-between;
       align-items: center;
       height: 100%;
-      gap: (32/16rem);
+      gap: 1.5rem;
     }
 
     .cs-title {
@@ -484,6 +512,7 @@
         width: 100%;
         place-self: center;
         text-align: center;
+        margin-bottom: 0;
       }
 
       .cs-text {
@@ -508,9 +537,11 @@
           grid-area: img;
           max-width: (275/16rem);
           width: 100%;
+
         }
 
         .arrow-logo {
+          display: block;
           grid-area: arrow;
 
           svg {
@@ -528,8 +559,21 @@
           margin-bottom: 1rem;
           justify-self: end;
           padding-right: 1rem;
+
+          .text-or{
+            display: block;
+          }
         }
       }
+    }
+
+    .images-group{
+        // max-width: 80rem;
+        max-width: (600/16rem);
+    }
+
+    .cs-button-solid{
+        padding: 0 clamp(1rem, 2vw, 2rem);
     }
   }
 }
